# afdko

./: Dockerfile.mayhem  Mayhemfile  requirements.txt
.github/workflows/: mayhem.yml  testpythonpackage.yml
c/makeotf/lib/cffread/: CMakeLists.txt
c/makeotf/lib/hotconv/: CMakeLists.txt
c/makeotf/lib/pstoken/: CMakeLists.txt
c/makeotf/lib/typecomp/: CMakeLists.txt
c/makeotf/source/: CMakeLists.txt
c/mergefonts/source/: CMakeLists.txt  mergeFonts.c
c/public/lib/source/cffread/: cffread.c
c/rotatefont/source/: CMakeLists.txt
c/shared/include/: ctlshare.h  tx_shared.h
c/shared/source/: CMakeLists.txt
c/shared/source/uforead/: uforead.c
c/tx/source/: CMakeLists.txt
cmake/: ExternalAntlr4Cpp.cmake  ExternalLibXML2.cmake
mayhem/: Dockerfile  Mayhemfile_ctuStrtod  fuzz_ctuStrtod.cpp
